--- a/views/new.ejs
+++ b/views/new.ejs
@@ -94,29 +94,27 @@
     <div class="container mt-5">
       <h1 class="mt-3">All campgrounds</h1>
 
-      <% for(let campground of campgrounds) { %>
-      <div class="container">
-        <div class="row">
-          <div class="col-12 col-lg-8 mb-3">
-            <div class="card" style="width: 18rem">
-              <div class="card-body">
-                <h5 class="card-title">
-                  Visit your favourite place <%= campground.city %>
-                </h5>
-                <p><%= campground.place %></p>
-                <a
-                  href="/campground/<%= campground._id %>"
-                  class="btn btn-outline-success"
-                >
-                  <%= campground.city %></a
-                >
-              </div>
-            </div>
+     <div class="container">
+  <div class="row g-3">
+    <% for (let campground of campgrounds) { %>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-3">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title"><%= campground.city %></h5>
+            <p><%= campground.place %></p>
+            <a
+              href="/campground/<%= campground._id %>"
+              class="btn btn-outline-success"
+            >
+              View Campground
+            </a>
           </div>
         </div>
       </div>
-      <% } %>
-    </div>
+    <% } %>
+  </div>
+</div>
+
   </body>
 
   <script>
