some styles changed

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,6 +1,9 @@
 <footer class="py-5 mt-auto font">
   <div class="container">
-    <span class="text-muted d-flex justify-content-center">
+    <span
+      class="text-muted d-flex justify-content-center"
+      style="font-weight: 400; color: azure"
+    >
       &copy yelpcamp 2022
     </span>
     <span class="text-muted d-flex justify-content-center">codewithDeepak</span>
