--- a/views/show.ejs
+++ b/views/show.ejs
@@ -15,7 +15,7 @@
 </head>
 <body class="bg-light">
   
-  <nav class="navbar bg-black mb-3 ">
+  <nav class="navbar  mb-3 " style="background-color: rgb(111, 176, 130);">
     <div class="container-fluid">
       <a class="navbar-brand text-white" href="#">Yelp camp</a>
       <button class="navbar-toggler bg-white" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -155,11 +155,7 @@
 
 
 
-<div class="container d-flex justify-content-center  align-items-center mt-5 mb-5">
-  <form action="/campground/<%= campground._id %>?_method=DELETE"  method="post" >
-  <button class="btn btn-primary">Delete</button>
-  </form>
-</div>
+
 </div>
 
 <div class="row g-3 m-3" id="imageGallery">
