--- a/public/stylesheet/home.css
+++ b/public/stylesheet/home.css
@@ -1,6 +1,6 @@
 body {
   height: 100vh;
-  background-image: url("https://images.unsplash.com/photo-1666694421187-75957423ee77?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
+  background-image: url("./home.jpg");
   background-size: cover;
   background-position: center;
 }
@@ -9,5 +9,5 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 500;
   font-style: normal;
-  background-color: rgb(56, 19, 92);
+  background-color: rgb(111, 176, 130);
 }
